sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: not found: value i
      	i -= 1
        ^AlgGnomeSort:13: error: not found: value i
      i + = 1
      ^